--- a/demoapp/src/main/resources/application.properties
+++ b/demoapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver: com.mysql.jdbc.Driver
-spring.datasource.url: jdbc:mysql://mysql:3306/demoappdb
+spring.datasource.url: jdbc:mysql://localhost:3306/demoappdb
 spring.datasource.username: root
 spring.datasource.password:Cts!cts@1
 
@@ -9,7 +9,6 @@ spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = create-drop
-spring.datasource.initialize=true
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
