--- a/demoapp/src/main/resources/application.properties
+++ b/demoapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver: com.mysql.jdbc.Driver
-spring.datasource.url: jdbc:mysql://localhost:3306/demoappdb
+spring.datasource.url: jdbc:mysql://mysql:3306/demoappdb
 spring.datasource.username: root
 spring.datasource.password:Cts!cts@1
 
