--- a/demoapp/src/main/resources/application.properties
+++ b/demoapp/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.datasource.driver: com.mysql.jdbc.Driver
-spring.datasource.url: jdbc:mysql://mysql:3306/demoappdb?autoReconnect=true
-spring.datasource.username: root
-spring.datasource.password:Cts!cts@1
-
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://mysql:3306/demoappdb?autoReconnect=true
+spring.datasource.test-while-idle=true
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+spring.datasource.max-idle=5
+spring.datasource.min-idle=1
+spring.datasource.initial-size=5
+spring.datasource.max-active=10
+spring.datasource.username=root
+spring.datasource.password=Cts!cts@1
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
